@@ -1,3 +1,8 @@
+2003-05-16  John Levon  <levon@movementarian.org>
+
+	* pp/counter_profile.cpp: remove bogus cpu speed
+	consistency check
+
 2003-05-09  John Levon  <levon@movementarian.org>
 
 	* m4/Makefile.am:
